--- a/table.css
+++ b/table.css
@@ -13,11 +13,11 @@ table tr {
 }
 
 table tr:hover {
-  background-color: #eceff1;
+  background-color: #797a7a;
 }
 
 table tr.indexhead {
-  border-bottom-color: rgba(255,255,255,0.1);
+  border-bottom-color: rgba(255,255,255,0.5);
 }
 
 table tr .indexcolname {
