better method of changing svg color

--- a/style.css
+++ b/style.css
@@ -100,3 +100,7 @@ footer {
 footer a {
   color: #546e7a;
 }
+
+.filter-white-grey {
+  filter: invert(100%) sepia(6%) saturate(360%) hue-rotate(32deg) brightness(113%) contrast(78%);
+}
